fix spacing issue

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -43,9 +43,43 @@
   
   .footer-middle {
     flex-basis: 30%;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+  }
+  
+  .footer-outter-container .footer-middle {
+    display: flex;
+    width: 200%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .service-areas {
+    display: flex;
+    width: 200%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .service-areas .service-areas-list {
+    display: flex;
+    
+    flex-wrap: wrap; /* Enable wrapping */
+    justify-content: center; /* Center items horizontally */
+    align-items: center;
+    padding: 0; /* Remove default padding */
+    list-style-type: none; /* Remove default list styling */
+  }
+  
+  .service-areas .service-areas-list .service-area-item {
+    /* Style for individual items */
+ /* Space around items */
+    /* Additional styles for items */
   }
   
   .phone-number {
